test/official_tests/for/class_in_body.lox
// error: {"line":2,"message":"expect expression","type":"ParseError"}
for (;;) class Foo {}
